[metadata]
name = nmaplite
version = 0.1.0
description = A lightweight network scanner application.
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/nmaplite
license = MIT

[options]
packages = find:
install_requires =
    scapy
    requests

[options.packages.find]
where = nmaplite

[options.entry_points]
console_scripts =
    nmaplite = nmaplite.cli:main

[tool:pytest]
testpaths = tests
python_files = test_*.py
